--- a/app/index.html
+++ b/app/index.html
@@ -1,25 +1,28 @@
 <!doctype html>
-<html ng-app>
+<html ng-app="pmh">
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" href="css/lib/feedback.css" />
+	<link href="css/lib/jquery-ui.css" rel="stylesheet">
     <script src="js/lib/angular.js"></script>
     <script src="js/lib/angular-route.js"></script>
     <script src="js/lib/jquery-1.11.1.min.js"></script>
+    <script src="js/lib/jquery-ui.min.js"></script>
     <script src="js/lib/feedback.js"></script>
+    <script src="js/app.js"></script>
 </head>
 <body>
     <div id="page">
         <div id="header">
             <label>HEADER</label>
         </div>
-        <div id="main">
+        <div id="main-home" class="main" ng-hide="start.started">
 			<div id="login-box">
 	            <h3>Login</h3>
-				<form name="login">
+				<form name="loginForm" ng-controller="LoginController as login">
 					<span>
 						<label>Username:</label>
 				        <input type="text" ng-model="username" placeholder="Enter username here" />
@@ -35,30 +38,31 @@
 				<img src="">
 			</div>
 			<div id="home-start">
-				<form name="start">
+				<form name="startForm" ng-controller="StartController as start"
+					ng-submit="start.startRoute()">
 					<span class="row">
 						<label>Route:</label>
-						<input type="select" ng-model="route" />
+						<input type="select" ng-model="start.routeDetails.route" />
 					</span>
 					<span class="row">
 						<label>Start Date:</label>
-						<input type="text" ng-model="startDate"/>
+						<input type="text" ng-model="start.routeDetails.startDate"/>
 					</span>
 					<span class="row">
 						<label>Pace:</label>
-						<input type="text" ng-model="pace"/>
+						<input type="text" ng-model="start.routeDetails.pace"/>
 						<select ng-model="paceUom"></select>
 					</span>
 					<span class="row">
 						<label>Hours Per Day:</label>
-						<input type="text" ng-model="hoursPerDay"/>
+						<input type="text" ng-model="start.routeDetails.hoursPerDay"/>
 					</span>
 					<span class="row">
 						<label>Time off</label>
-						<input type="text" ng-model="timeOff">
-						<select ng-model="timeOffUom"></select>
+						<input type="text" ng-model="start.routeDetails.timeOff">
+						<select ng-model="start.routeDetails.timeOffUom"></select>
 						<label>Frequency</label>
-						<select ng-model="timeOffFrequency"></select>
+						<select ng-model="start.routeDetails.timeOffFrequency"></select>
 					</span>
 					<input class="submit-button" type="submit" value="Start My Adventure">
 				</form>
@@ -70,9 +74,7 @@
     </div>
     <script type="text/javascript">
         $.feedback({
-//            ajaxURL: 'http://localhost:7090/shop/cart/add',
-//            ajaxURL: 'http://api.postmarkapp.com/email',
-            ajaxUrl: 'server/mailer.php',
+            ajaxUrl: 'server/feedback-mailer.php',
             html2canvasURL: 'js/lib/html2canvas.js'
         });
     </script>
