--- a/app/index.html
+++ b/app/index.html
@@ -6,13 +6,12 @@
     <link rel="stylesheet" type="text/css" href="css/reset.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" href="css/lib/feedback.css" />
-	<link href="css/lib/jquery-ui.css" rel="stylesheet">
-    <script src="js/lib/angular.js"></script>
-    <script src="js/lib/angular-route.js"></script>
-    <script src="js/lib/jquery-1.11.1.min.js"></script>
-    <script src="js/lib/jquery-ui.min.js"></script>
+    <script src="bower_components/angular/angular.min.js"></script>
+    <script src="bower_components/angular-route/angular-route.min.js"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="js/lib/feedback.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/controllers/StartController.js"></script>
 </head>
 <body>
     <div id="page">
@@ -31,7 +30,7 @@
 						<label>Password:</label>
 					    <input type="password" ng-model="password" placeholder="Enter password here" />
 					</span>
-		            <input class="submit-button" type="submit" value="Log in as {{username}}"></input>
+		            <input class="submit-button" type="submit" value="Log in as {{username}}" />
 				</form>
 			</div>
 			<div id="home-marketing">
